--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,36 @@
 * {
   font-family: Verdana;
+  text-align: center;
+  color: white;
 }
 
 html {
   background-color: black;
+}
+
+h1,
+h2 {
+  color: white;
+
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p {
+  color: grey;
+  font-size: 21px;
+
+}
+
+footer {
+  padding: 20px;
 }
